WebCore:

2009-07-30  Brady Eidson  <beidson@apple.com>

        Reviewed by Mark Rowe, but Dan Bernstein also reviewed and asked thoughtful questions.

        <rdar://problem/7106968> and https://bugs.webkit.org/show_bug.cgi?id=27868
        http://www.ruthhuntcandy.com/ goes into infinite refresh in WebKit, works in others.

        Test: http/tests/misc/meta-refresh-stray-single-quote.html

        * platform/network/HTTPParsers.cpp:
        (WebCore::parseHTTPRefresh): Allow for a stray quote character at the start of the URL string.

LayoutTests:

2009-07-30  Brady Eidson  <beidson@apple.com>

        Reviewed by Mark Rowe, but Dan Bernstein also reviewed and asked thoughtful questions.

        <rdar://problem/7106968> and https://bugs.webkit.org/show_bug.cgi?id=27868
        http://www.ruthhuntcandy.com/ goes into infinite refresh in WebKit, works in others.

        * http/tests/misc/meta-refresh-stray-single-quote-expected.txt: Added.
        * http/tests/misc/meta-refresh-stray-single-quote.html: Added.
        * http/tests/misc/resources/success-notify-done.html: Added.



Canonical link: https://commits.webkit.org/38230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46624 268f45cc-cd09-0410-ab3c-d52691b4dbfc